--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-navigation",
   "version": "4.4.4",
   "description": "Routing and navigation for your React Native apps",
-  "main": "src/index.js",
+  "main": "packages/native/src/index.js",
   "types": "typescript/react-navigation.d.ts",
   "repository": {
     "url": "git@github.com:react-navigation/react-navigation.git",
